<resources>
    <string name="app_name">Small Pdf test</string>
    <string name="not_specified">Not specified</string>
    <string name="view_repositories_button_text">View repositories</string>
    <string name="repositories_header_title">%1$s\'s repositories</string>
    <string name="empty_repositories_view_text">The repositories list is empty.</string>
    <string name="open_issues_label">Number of open issues:</string>
    <string name="commit_sha_label">SHA:</string>
    <string name="commit_message_label">Commit message</string>
    <string name="committer_label">Committer</string>
    <string name="author_label">Author</string>
    <string name="date_label">Date:</string>
    <string name="url_label">Url:</string>
    <string name="welcome_text">Welcome to</string>
    <string name="login_button_text">LogIn</string>
    <string name="commits_toolbar_title_text">Commits</string>
    <string name="account_info">Account info</string>
    <string name="name_label">name:</string>
    <string name="company_label">company:</string>
</resources>
