<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/commitDetailsLayout"
              android:padding="@dimen/small_padding"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commit_message_label"
            style="@style/CommitDetailsLabelStyle"/>

    <TextView
            android:id="@+id/commitMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:padding="@dimen/smallest_padding"
            android:background="@color/commit_message_background_color"
            tools:text="Repositories screen added\n Added a button that leads user to repositories screen where all of his repositories are listed. Added API for that case and added Repositories activity and view model."/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/committer_label"
                style="@style/CommitDetailsLabelStyle"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin">
            <ImageView
                    android:id="@+id/committerIcon"
                    android:layout_width="@dimen/commit_details_avatar_icon_size"
                    android:layout_height="@dimen/commit_details_avatar_icon_size"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin"/>

            <TextView
                    android:id="@+id/committerNameTextVIew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/commit_details_large_text"
                    tools:text="Ogi wan Kenobi"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_label"
                style="@style/CommitDetailsLabelStyle"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin">
            <ImageView
                    android:id="@+id/authorIcon"
                    android:layout_width="@dimen/commit_details_avatar_icon_size"
                    android:layout_height="@dimen/commit_details_avatar_icon_size"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin"/>

            <TextView
                    android:id="@+id/authorNameTextVIew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/commit_details_large_text"
                    tools:text="Ogi wan Kenobi"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                style="@style/CommitDetailsLabelStyle"/>

        <TextView
                android:id="@+id/dateTextVIew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/small_padding"
                android:paddingEnd="@dimen/small_padding"
                tools:text="15.12.2019."/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commit_sha_label"
                style="@style/CommitDetailsLabelStyle"/>

        <TextView
                android:id="@+id/shaTextVIew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/small_padding"
                android:paddingEnd="@dimen/small_padding"
                tools:text="3eebf5e6b70a14bd7dd8696584d4a4febdd0bd1b"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_label"
                style="@style/CommitDetailsLabelStyle"/>

        <TextView
                android:id="@+id/urlTextVIew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textColorLink="@color/secondaryText"
                android:paddingStart="@dimen/small_padding"
                android:paddingEnd="@dimen/small_padding"
                tools:text="https://github.com/OgiVanKenobi/SmallPdfTest/commit/3eebf5e6b70a14bd7dd8696584d4a4febdd0bd1b"/>
    </LinearLayout>
</LinearLayout>